# aocenv

./: .gitignore  CHANGELOG.md  COLLABORATING.md  README.md  TODO.md  notepad.py  progress.json  pyproject.toml
.github/workflows/: ci.yml
.templates/: default.py.template
env_src/: pyproject.toml  requirements.txt
env_src/aoc/: __init__.py  _utils.py  clear_viewer.py  cli.py  parsers.py  stats_viewer.py  tools.py
src/: requirements.txt
src/aoc/: __init__.py  _utils.py  bench.py  bind.py  cache.py  clear.py  cli.py  configuration.py  constants.py  context.py  input.py  load.py  misc.py  parsers.py  run.py  submit.py  timed_runner.py  tools.py
src/aoc/cli_commands/: context.py  template.py  test.py
tests/: test_aoc_module.py  test_bind.py  test_cli.py  test_cli_context.py  test_cli_standalone.py  test_cli_template.py  test_cli_test.py  test_configuration.py  test_context.py  test_input.py  test_parsers.py  test_submit.py  test_tools.py  test_utils.py
