[project]
name = "aocenv"
version = "0.1.0"
description = "User-friendly environment management CLI and package for Advent of Code"
authors = [
    {name = "Tymon Becella", email = "tymon.becella@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
keywords = ["aoc", "advent-of-code", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Unix",
    "Topic :: Games/Entertainment :: Puzzle Games",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems",
    "Typing :: Typed"
]

dependencies = [
    "beautifulsoup4",
    "click",
    "requests",
    "returns",
]

[dependency-groups]
dev = [
    "pytest",
    "mypy",
    "ruff",
    "pytest-cov",
]

[project.scripts]
aoc = "aoc.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
python_executable = ".venv/bin/python"
check_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["src/aoc"]
