[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc-env"
version = "0.1.0"
authors = [{ name = "Your Name", email = "your@email.com" }]
description = "A personalized environment for Advent of Code."
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.8",
]

[project.scripts]
aoc = "aoc.cli:cli"

# This replaces the [tool.setuptools.packages.find] section
[tool.setuptools]
packages = ["aoc"]
