[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc-env"
version = "0.1.0"
authors = [{ name = "Your Name", email = "your@email.com" }]
description = "A personalized environment for Advent of Code."
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "click>=8.1.8",
    "colorlog>=6.9.0",
    "html2text>=2024.2.26",
    "requests>=2.32.4",
    "textual>=0.73.0",
]

[project.scripts]
aoc = "aoc.cli:cli"

# This replaces the [tool.setuptools.packages.find] section
[tool.setuptools]
packages = ["aoc"]
