[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc-env"
version = "1.4.0"
authors = [{ name = "Tymon Becella", email = "tymon.becella@gmail.com" }]
description = "A personalized environment for Advent of Code."
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "click>=8.1.8",
    "colorlog>=6.9.0",
    "html2text>=2024.2.26",
    "numpy>=1.24.4",
    "requests>=2.32.4",
    "tabulate>=0.9.0",
]

[project.scripts]
aoc = "aoc.cli:cli"

[tool.setuptools]
packages = ["aoc"]
